<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F7F7F7"
    android:scrollbars="vertical"
    tools:context=".FAQ">

    <androidx.constraintlayout.utils.widget.ImageFilterButton
        android:id="@+id/back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_button"
        android:backgroundTint="@color/white"
        android:onClick="goBack"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/back"
            tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:fontFamily="@font/mmedium"
            android:text="1. How can I add my contacts?"
            android:textColor="@color/colorPrimary"
            android:textSize="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:fontFamily="@font/mlight"
            android:text="@string/Q1"
            android:textColor="@color/textColorSecondary"
            android:textSize="12dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/mmedium"
                android:text="2. How can I share my location with my trusted contacts?"
                android:textColor="@color/colorPrimary"
                android:textSize="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/mlight"
                android:text="@string/Q2"
                android:textColor="@color/textColorSecondary"
                android:textSize="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/mmedium"
                android:text="3. Do my contacts need to have Guardian installed?"
                android:textColor="@color/colorPrimary"
                android:textSize="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/mlight"
                android:text="@string/Q3"
                android:textColor="@color/textColorSecondary"
                android:textSize="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/mmedium"
                android:text="4. Can I share my location with all the contacts at the same time?"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/mlight"
                android:text="@string/Q4"
                android:textColor="@color/textColorSecondary"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/mmedium"
                android:text="5. How can I edit my contacts list?"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/mlight"
                android:text="@string/Q5"
                android:textColor="@color/textColorSecondary"
                android:textSize="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/mmedium"
                android:text="6. Is my data private?"
                android:textColor="@color/colorPrimary"
                android:textSize="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/mlight"
                android:text="@string/Q6"
                android:textColor="@color/textColorSecondary"
                android:textSize="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/mmedium"
                android:text="7. How can I activate the fake call?"
                android:textColor="@color/colorPrimary"
                android:textSize="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="40dp"
                android:fontFamily="@font/mlight"
                android:text="@string/Q7"
                android:textColor="@color/textColorSecondary"
                android:textSize="12dp" />

            <TextView
                android:layout_height="1dp"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"/>

        </TableLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>